--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -14,6 +14,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <title>{title}</title>
     <script is:inline>
       const theme = localStorage.getItem('theme');
@@ -54,7 +55,7 @@ const { title } = Astro.props;
       <slot />
     </main>
     <footer>
-      <span class="prompt">&gt;</span> &copy; {new Date().getFullYear()} asawo
+      <span class="prompt">&gt;</span> &copy; {new Date().getFullYear()} <a href={"https://github.com/asawo"}>asawo</a>
     </footer>
   </body>
 </html>
